RoadmapAPI: added endpoint to retrieve latest finished milestone of a roadmp; updsted docs
